fix map zooming out on mobile bug

--- a/src/components/ViewToShow/MapView/Map/Map.scss
+++ b/src/components/ViewToShow/MapView/Map/Map.scss
@@ -7,12 +7,14 @@ $offset-top: $size-lg;
   height: 100%;
   width: 100%;
   background-color: #eee;
-  top: $offset-top;
+  position: absolute;
+  top: 0;
   left: 0;
-  z-index: -1;
+  z-index: 1;
   transition: height 0.35s ease;
 
   @media all and(min-width: 768px) {
+    position: static;
     width: calc(100% - 414px); // 414px is the width of the tray
     float: right;
   }
